[package]
name = "jito-priority-fee-sharing"
version = "0.0.5"
authors = ["Jito Network Maintainers <support@jito.network>"]
repository = "https://github.com/jito-foundation/priority-fee-sharing"
homepage = "https://jito.network/"
license = "Apache-2.0"
edition = "2021"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lib]
name = "priority_fee_sharing"
crate-type = ["lib"]

[[bin]]
name = "priority-fee-sharing"
path = "src/bin/main.rs"

[dependencies]
# Workspace dependencies
anyhow = "1.0.99"
bincode = "1.3.3"
clap = { version = "=4.5.31", features = ["derive", "env"] }
csv = "1.3.1"

# External dependencies (not in workspace)
dotenv = { version = "=0.15.0" }
env_logger = "0.11.8"
log = "0.4.27"
prometheus = { version = "=0.14.0", features = ["push"] }
rocksdb = { version = "=0.23.0" }
serde = "1.0.219"

# Solana workspace dependencies
solana-account = { version = "3.0.0", features = ["bincode"] }
solana-client = { version = "3.1.0" }
solana-commitment-config = { version = "3.0.0" }
solana-compute-budget-interface = { version = "3.0.0" }
solana-epoch-info = { version = "3.0.0" }
solana-instruction = { version = "3.0.0" }
solana-keypair = { version = "3.0.0" }
solana-metrics = { version = "3.1.0" }
solana-native-token = { version = "3.0.0" }
solana-pubkey = { version = "3.0.0" }
solana-reward-info = { version = "3.0.0" }
solana-rpc-client = { version = "3.1.0" }
solana-signature = { version = "3.1.0" }
solana-signer = { version = "3.0.0" }
solana-system-interface = { version = "2.0" }
solana-transaction = { version = "3.0.0" }
solana-vote-interface = { version = "3.0.0", features = ["bincode", "serde"] }
tokio = "1.47.1"

[lints.rust]
warnings = "deny"

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(target_os, values("solana"))',
    'cfg(feature, values("frozen-abi", "no-entrypoint"))',
]

[lints.clippy]
arithmetic_side_effects = "deny"
default_trait_access = "deny"
manual_let_else = "deny"
used_underscore_binding = "deny"
